# document-layout-model-training

./: .gitignore  README.md  clean_overlaps.py  clean_overlaps_v2.py  clean_overlaps_v3.py  conversacion_claude.md  generate_heron_coco.py  pyproject.toml  reimport_annotations.py  upload_to_cvat.py
core/: __init__.py  classify_doctype.py  cli.py  cvat_sync.py  evaluate.py  init_project.py  predict.py  promote.py  render.py  train.py
core/labels/: doclaynet_17.yaml
core/lib/: config.py  cvat.py  data.py  eval.py  model.py  postproc.py  tracking.py
cvat_projects/project4_docling_heron_clean/: README.md
docs/: RESUME.md
docs/superpowers/plans/: 2026-05-02-plan-01-foundation.md  2026-05-02-plan-02-render-cvat-cli.md  2026-05-02-plan-03-predict-postproc.md  2026-05-03-plan-04-training-mlflow.md  2026-05-03-plan-05-eval-promote-predict-pdf.md  2026-05-04-plan-06-classify-init-readme.md
docs/superpowers/specs/: 2026-05-02-layout-model-factory-design.md
projects/eaf/: EXPERIMENTS.md  config.yaml
projects/eaf/cvat/pre_annotations/: 20260502-224640.json  20260502-225118.json
projects/eaf/models/: production.pt
projects/eaf/runs/P_repeat_factor/: history.json
projects/eaf/runs/P_repeat_factor_v2/: config_resolved.yaml  data_split.json  eval.json  eval_detailed.json  history.json
projects/eaf/runs/smoke/: config_resolved.yaml  data_split.json  eval.json  history.json
scripts/: render_pdf_to_png.py
tests/: test_classify.py  test_cli.py  test_config.py  test_cvat_client.py  test_cvat_sync.py  test_data.py  test_eval.py  test_evaluate.py  test_init_project.py  test_model.py  test_postproc.py  test_predict.py  test_promote.py  test_render.py  test_tracking.py  test_train.py
tests/fixtures/: sample_config.yaml  sample_labels.yaml
training/: EAF-477-2025_ground_truth.json  draw_boxes_on_pdf.py  draw_boxes_on_pdf_v2.py  generate_comparison_pdf.py  generate_comparison_pdf_v2.py  reevaluate_real_map.py  run_docling_pipeline.py  test_best_model.py  train_round2.py  train_round3.py  train_round4.py  train_strategies.py
training/models/: data_split.json  results.json  results_real_map.json  results_round3.json  results_round4.json
(+2 files in other folders)
