[project]
name = "dlmf"
version = "0.1.0"
description = "Document Layout Model Factory"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.0",
    "torchvision>=0.15",
    "transformers>=4.40",
    "Pillow>=10.0",
    "PyMuPDF>=1.23",
    "pdf2image>=1.17",
    "pikepdf>=8.0",
    "requests>=2.31",
    "pyyaml>=6.0",
    "typer>=0.12",
    "rich>=13.0",
    "mlflow>=2.10",
    "numpy>=1.26",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "responses>=0.25",
]

[project.scripts]
dlmf = "core.cli:app"  # placeholder; CLI implemented in Plan 2

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["core"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
